# pd_gait

./: .gitignore  CNN_GRU_KAN.py  README.md  best_model.pth  data_loader_cv5.py  mlp.py  pyproject.toml  test_data_loader.py  train.py
src_test/: data_laoder.py  model.py  train.py
